--- a/style.css
+++ b/style.css
@@ -5,6 +5,12 @@ body {
     font-family: 'Outfit', sans-serif;
 }
 
+.center{
+    display: grid;
+    place-items: center;
+    height: 100vh;
+}
+
 .card {
     display: flex;
     flex-direction: column;
@@ -12,7 +18,6 @@ body {
     background: hsl(0, 0%, 100%);
     padding: 1rem;
     text-align: center;
-    margin: 5rem auto;
 }
 
 .border-radius {
@@ -25,12 +30,13 @@ body {
     object-fit: cover;
 }
 
-h3 {
+h1 {
     color: hsl(218, 44%, 22%);
     margin: 1rem auto 0%;
+    font-size: 1.5rem;
 }
 
-p {
+.card-text {
     font-size: 1rem;
     font-weight: 400;
     color: hsl(220, 15%, 55%);
