--- a/style.css
+++ b/style.css
@@ -1,52 +1,56 @@
-@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap");
 
 body {
-    background: hsl(212, 45%, 89%);
-    font-family: 'Outfit', sans-serif;
+  background: hsl(212, 45%, 89%);
+  font-family: "Outfit", sans-serif;
 }
 
-.center{
-    display: grid;
-    place-items: center;
-    height: 100vh;
+.mb-1 {
+  margin-block: 1rem;
+}
+
+.center {
+  display: grid;
+  place-items: center;
+  min-height: 100vh;
 }
 
 .card {
-    display: flex;
-    flex-direction: column;
-    max-width: 15rem;
-    background: hsl(0, 0%, 100%);
-    padding: 1rem;
-    text-align: center;
+  display: flex;
+  flex-direction: column;
+  max-width: 15rem;
+  background: hsl(0, 0%, 100%);
+  padding: 1rem;
+  text-align: center;
 }
 
 .border-radius {
-    border-radius: 1rem;
+  border-radius: 1rem;
 }
 
 .card-image {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 h1 {
-    color: hsl(218, 44%, 22%);
-    margin: 1rem auto 0%;
-    font-size: 1.5rem;
+  color: hsl(218, 44%, 22%);
+  margin: 1rem auto 0%;
+  font-size: 1.5rem;
 }
 
 .card-text {
-    font-size: 1rem;
-    font-weight: 400;
-    color: hsl(220, 15%, 55%);
+  font-size: 1rem;
+  font-weight: 400;
+  color: hsl(220, 15%, 55%);
 }
 
 .attribution {
-    font-size: 11px;
-    text-align: center;
+  font-size: 11px;
+  text-align: center;
 }
 
 .attribution a {
-    color: hsl(228, 45%, 44%);
+  color: hsl(228, 45%, 44%);
 }
